# ReggieBot

./: CMakeLists.txt  README.md  package.xml
config/: controller_params.yaml  ekf.yaml  gazebo_params.yaml  mapper_params_online_async.yaml  reggiebot.rviz  twist_mux.yaml
launch/: gazebo_reggie.launch.py  physical_reggie.launch.py  rplidara1.launch.py  rsp_reggie.launch.py  sim_reggie.launch.py  teleop_joypad.launch.py
rviz/: reggiebot.rviz
src/: reggie.cpp
udev_rules/: 80-rplidar-a1.rules
urdf/: inertial_macros.xacro  reggiebot.urdf.xacro  reggiebot_core.xacro  reggiebot_gazebo.xacro  reggiebot_gazebo_ros2_control.xacro  reggiebot_gazebo_simple_control.xacro  reggiebot_imu.xacro  reggiebot_lidar.xacro  reggiebot_physical.urdf.xacro  reggiebot_physical_ros2_control.xacro  reggiebot_ros2_control.xacro
worlds/: empty.world  sparce_room.world
