<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reggie_bot</name>
  <version>0.0.0</version>
  <description>An autonomous indoor 2 wheel differential drive robot.</description>
  <maintainer email="none@none.com">Gavin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- ros2_control controllers -->
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- xbox joypad controls -->
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- rplidar a1m8 -->
  <exec_depend>rplidar_ros</exec_depend>

  <!-- TODO: move gazebo stuff to it's own pkg -->
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
